# cudamuca

./: CMakeLists.txt  Makefile  README.md  ising2D.cpp  ising2D.cu  ising2D_io.hpp  muca.hpp
